# dnnDetector_lib

./: .gitignore  CMakeLists.txt  README.md  README_ch.md
include/: detector.hpp
param/: param.xml
src/: demo.cpp  detector.cpp
